--- a/golden/promtail.yaml
+++ b/golden/promtail.yaml
@@ -6,7 +6,7 @@ positions:
   filename: /tmp/positions.yaml
 
 clients:
-  - url: http://18.118.142.233:3100/loki/api/v1/push
+  - url: http://WILL_BE_REPLACED_BY_TF:3100/loki/api/v1/push
 
 scrape_configs:
   - job_name: journal
