--- a/golden-image/promtail.yaml
+++ b/golden-image/promtail.yaml
@@ -6,7 +6,7 @@ positions:
   filename: /tmp/positions.yaml
 
 clients:
-  - url: http://LOKI_URL:3100/loki/api/v1/push
+  - url: http://3.149.255.20:3100/loki/api/v1/push
 
 scrape_configs:
   - job_name: journal
